# GPGPU_OPENGL_SAMPLE

./: CMakeLists.txt  main.cpp
0_intruction/: test0.cpp  test0_glsl.cpp  test0_glsl_trans_var.cpp  uniform.frag
1_texture_buffer/: read_write_texture.cpp
2_gpgpu_sample/: convolution.frag  gpu_convolution.cpp  passthrough.frag
3_compute_shader/: simplecompute.cpp
4_convolution_compute/: convolution.comp  convolution_compute.cpp
include/: vapp.h  vgl.h
read_pic/: gl_texture.frag  gl_texture.vert  test.cpp
test0/: passthrough.frag  passthrough.vert  test0_glsl.cpp  test0_glsl_trans_var.cpp
test1/: compute.sh  read_write_texture.cpp
test2/: clean.frag  convolution.frag  gpu_convolution.cpp
test3/: clean.frag  gpu_convolution.cpp  passthrough.frag
test4/: reverse_image.cpp
test5/: fbo.cpp  test.cpp
test6/: shader.cpp  shader.h  test.cpp
utils/: CReader.cpp  CReader.h  CSystem.cpp  CSystem.h  CTimer.cpp  CTimer.h
